# weread-playwright

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  build.sh  docker-compose.yml  env.example  main.py  pyproject.toml  requirements.txt
tests/: test_reauthentication.py  test_task_manager.py  test_trigger_server.py
weread/: __init__.py  auth.py  config.py  logger.py  notifier.py  reader.py  scheduler.py  stats.py  task_manager.py  trigger_server.py
